# SGXBLAS

./: Makefile  README.md
attack/source/: README.md
attack/source/ground_truth/: Makefile  br_info.tmp  br_info_reader.py  gr_results_reader.py
attack/source/ground_truth/llvm-pass/: .CMakeLists.txt.swp  .README.md.swp  CMakeLists.txt  README.md
attack/source/ground_truth/llvm-pass/flipBranches/: CMakeLists.txt  flipBranches.cpp
attack/source/ground_truth/llvm-pass/flipLauncher/: CMakeLists.txt  flipLauncher.cpp
attack/source/ground_truth/openblas_makefiles/attack/interface/: Makefile
attack/source/ground_truth/openblas_makefiles/fast/: Makefile
attack/source/llvm/: Makefile  README.md
attack/source/llvm/hz-llvm/: Makefile  a.cpp  b.cpp  readme.md  rtlib.cpp
attack/source/llvm/hz-llvm/pass/DetectBranch/: DetectBranch.cpp
attack/source/llvm/llvm-pass/: CMakeLists.txt  README.md
attack/source/llvm/llvm-pass/countBranches/: CMakeLists.txt  countBranches.cpp
attack/source/llvm/openblas_makefiles/: README.md
attack/source/llvm/openblas_makefiles/attack/: Makefile.rule
attack/source/llvm/openblas_makefiles/attack/interface/: Makefile
attack/source/llvm/openblas_makefiles/init/: Makefile.rule
attack/source/llvm/test_globalvar/: Makefile  func.cc  func.h  main.cc
poc/: Makefile
poc/infras/: Makefile  common.h  main.cpp  mydataloader.cpp  mydataloader.h  myresnet.cpp  myresnet.h  poc.out  tensor.h  utils.h
poc/train/: eval_imagenet.py  export_model.py  lenet5.py  train.py
poc/train_on_torch/: prepare_dataset.py
(+2 files in other folders)
